Fixed menu issues with overlapping and flex orientations.

--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ nav {
     justify-content: space-around;
     margin-top: 1px;
     width: 30%;
+    /* opacity: 0; */
 }
 
 .nav-links li {
@@ -78,9 +79,10 @@ nav {
         flex-direction: column;
         align-items: center;
         width: 25%;
-        transform: translateX(100%);
+        /* transform: translateX(100%); */
         z-index: 1;
         transition: transform 0.3s ease-in;
+        opacity: 0;
     }
     .nav-links li {
         opacity: 0;
@@ -92,6 +94,7 @@ nav {
 
 .nav-active {
     transform: translateX(0%);
+    opacity: 1;
 }
 
 @keyframes navLinkFade {
@@ -138,7 +141,7 @@ h1 {
 }
 
 .projectsContainer {
-    display: grid;
+    display: flex;
     flex-flow: column;
     align-items: center;
     margin-top: 2px;
@@ -160,8 +163,10 @@ h1 {
 .row {
     /* margin-bottom: 24px; */
     display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
     width: 100%;
-    height: 33%;
+    height: auto;
 }
 
 .project {
@@ -181,9 +186,24 @@ h1 {
 .projectItemLink {
     display: flex;
     flex-flow: column;
+    /* flex: 1 1 auto; */
     width: 100%;
     overflow: hidden;
     text-decoration: none;
-    min-width: 29vh;
+    /* min-width: 29vh; */
+    padding: 3rem 0rem;
     /* margin: 7rem 7rem; */
+}
+
+@media screen and (max-width:845px) {
+    .row {
+        flex-direction: row;
+        transition: all 0.3s ease;
+    }
+    .project {
+        width: 33%;
+    }
+    .projectItemLink {
+        width: 33%;
+    }
 }
